@@ -5,8 +5,6 @@ process.load("ISpy/Analyzers/ISpy_Producer_cff")
 process.load("Configuration.StandardSequences.Geometry_cff")
 process.load("Configuration.StandardSequences.MagneticField_AutoFromDBCurrent_cff")
 process.load("Configuration.StandardSequences.Reconstruction_cff")
-process.load("Configuration.StandardSequences.RawToDigi_Data_cff")
-process.load('Configuration.StandardSequences.VtxSmearedEarly10TeVCollision_cff')
 process.load('Configuration/StandardSequences/FrontierConditions_GlobalTag_cff')
 process.GlobalTag.globaltag = 'GR09_P_V6::All'
 
